--- a/custom_components/general_link/translations/zh-Hant.json
+++ b/custom_components/general_link/translations/zh-Hant.json
@@ -1,10 +1,10 @@
 {
     "config": {
         "abort": {
-            "already_configured": "服務已被配置",
-            "single_instance_allowed": "該集成已經配置過了，且只能配置一次。若要重新配置，請先刪除舊集成。",
-            "select_error": "請重新選擇",
-            "not_found_device": "未掃描到設備"
+            "already_configured": "服務已配置過。",
+            "single_instance_allowed": "此整合已經配置過，且只能配置一次。若要重新配置，請先刪除舊的整合。",
+            "select_error": "請重新選擇。",
+            "not_found_device": "未掃描到設備。"
         },
         "error": {
             "cannot_connect": "無法連接到設備。"
@@ -12,13 +12,33 @@
         "step": {
             "option": {
                 "data": {
-                    "light_device_type": "智能燈光控制方式"
+                    "light_device_type": "智慧燈光控制方式",
+                    "scanmode": "掃描模式"
                 },
-                "description": "請選擇網關添加方式以及智能燈光控制方式。"
+                "description": "請選擇網關添加方式以及智慧燈光控制方式。"
             },
             "scan": {
                 "data": {},
-                "description": "請選擇掃描到的網關進行連接。"
+                "description": "請從掃描結果中選擇要連接的網關。"
+            },
+            "token": {
+                "data": {},
+                "description": "請選擇場所ID。"
+            },
+            "envkey": {
+                "data": {
+                    "name": "使用者名稱",
+                    "password": "密碼"
+                },
+                "description": "請輸入APP的使用者名稱和密碼。（手動輸入後直接提交）"
+            },
+            "manual": {
+                "data": {
+                    "place": "場所標識",
+                    "envkey": "場所憑證",
+                    "password": "場所密碼"
+                },
+                "description": "請輸入场所標識、場所憑證和場所密碼。"
             }
         }
     }
